# skia

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  AGENTS.override.md  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  TESTING_STRATEGY.md  UPPER_LEVEL_COMMANDS.md  defs.bzl
.github/workflows/: test.yml
codec/: Cargo.toml
codec/src/: jpeg.rs  lib.rs  png.rs  webp.rs
core/: Cargo.toml
core/src/: display_list.rs  lib.rs  paint.rs  sampling.rs
core/tests/: display_list.rs
cpu/: Cargo.toml
cpu/src/: canvas.rs  clip.rs  lib.rs  stroke.rs
cpu/tests/: clip.rs  font.rs  stroke.rs  text.rs
error/: Cargo.toml
error/src/: lib.rs
geometry/: Cargo.toml
geometry/src/: lib.rs
gpu/: Cargo.toml
gpu/metal/: Cargo.toml  build.rs
gpu/metal/src/: clip.rs  clip_geometry.rs  lib.rs
gpu/metal/tests/: metal.rs
gpu/src/: lib.rs  software.rs
gpu/tests/: contract.rs
gpu/tests/support/: render_cases.rs
gpu/text/: Cargo.toml
gpu/text/src/: atlas.rs  cache.rs  decoration.rs  error.rs  key.rs  layout.rs  lib.rs
gpu/text/tests/: adapter.rs
gpu/text/tests/support/: mod.rs
gpu/vulkan/: Cargo.toml  README.md  WINDOWS_VALIDATION.md
gpu/vulkan/src/: lib.rs  surface.rs
gpu/vulkan/tests/: vulkan.rs
image/: Cargo.toml
image/src/: lib.rs
path/: Cargo.toml
path/src/: arc.rs  bounds.rs  lib.rs  math.rs  reverse.rs
path/tests/: path.rs
scripts/: fetch_unicode_conformance.sh  regenerate_goldens.sh
shaders/: README.md  solid_rect.metal
skia-rs/: .gitignore  BUILD.bazel  Cargo.toml
skia-rs/codec/: BUILD.bazel  Cargo.toml
skia-rs/codec/src/: api.rs  api_tests.rs  lib.rs
skia-rs/codec/src/api/: png.rs  webp.rs
skia-rs/codec/tests/: codec_api.rs
skia-rs/core/: BUILD.bazel  Cargo.toml
skia-rs/core/src/: clip.rs  display_list.rs  effect_handle_tests.rs  lib.rs  paint.rs  paint_tests.rs  path_effect.rs  path_effect_tests.rs  runtime_shader_tests.rs  shader_graph_tests.rs  text_geometry.rs  text_path.rs
skia-rs/core/src/shaders/: gradient.rs  image.rs  mod.rs  runtime.rs  shader.rs
skia-rs/core/tests/: display_list.rs  text_geometry.rs
skia-rs/core/tests/support/: mod.rs
skia-rs/cpu/: BUILD.bazel  Cargo.toml
skia-rs/cpu/src/: canvas.rs  canvas_tests.rs  clip.rs  clip_tests.rs  stroke.rs  stroke_tests.rs
skia-rs/cpu/tests/: canvas.rs  font.rs  path_boolean.rs
skia-rs/cpu/tests/support/: font_fixtures.rs
skia-rs/effects/: BUILD.bazel  Cargo.toml
skia-rs/effects/src/: factories.rs  lib.rs  path_effect.rs
skia-rs/effects/tests/: path_effects.rs
skia-rs/error/: BUILD.bazel
skia-rs/error/src/: lib.rs
skia-rs/facade/: Cargo.toml
skia-rs/geometry/: BUILD.bazel  Cargo.toml
skia-rs/geometry/src/: geometry.rs  lib.rs
skia-rs/geometry/tests/: geometry.rs
skia-rs/gpu/: BUILD.bazel  Cargo.toml
skia-rs/gpu/metal/: BUILD.bazel  Cargo.toml  build.rs
skia-rs/gpu/metal/shaders/: renderer.metal
skia-rs/gpu/metal/src/: backend.rs  clip.rs  lib.rs
skia-rs/gpu/metal/src/backend/: clip.rs  clip_geometry.rs  clip_geometry_tests.rs
skia-rs/gpu/metal/tests/: metal.rs
skia-rs/gpu/src/: backend.rs  command.rs  encoder.rs  error.rs  lib.rs  limits.rs  resource.rs  runtime_shader.rs  runtime_shader_tests.rs  software.rs  surface.rs
skia-rs/gpu/tests/: contract.rs  render_oracle.rs
skia-rs/gpu/tests/golden/: manifest.toml
skia-rs/gpu/tests/support/: render_cases.rs
skia-rs/gpu/text/: BUILD.bazel  Cargo.toml
skia-rs/gpu/text/src/: atlas.rs  error.rs  layout.rs  lib.rs  outline.rs
skia-rs/gpu/text/tests/: adapter.rs
skia-rs/gpu/vulkan/: BUILD.bazel  Cargo.toml  README.md  build.rs
skia-rs/gpu/vulkan/shaders/: renderer.wgsl
skia-rs/gpu/vulkan/src/: backend.rs  commands.rs  context.rs  error.rs  lib.rs  renderer.rs  surface.rs
skia-rs/gpu/vulkan/tests/: vulkan.rs
skia-rs/image/: BUILD.bazel  Cargo.toml
skia-rs/image/src/: image.rs  image_tests.rs  lib.rs
skia-rs/path/: BUILD.bazel  Cargo.toml
skia-rs/path/src/: lib.rs  math.rs  path.rs
skia-rs/path/tests/: path.rs
skia-rs/pdf/: BUILD.bazel  Cargo.toml
skia-rs/pdf/examples/: pdf_qa.rs
skia-rs/pdf/src/: lib.rs  pdf.rs  pdf_tests.rs
skia-rs/shaders/: BUILD.bazel  solid_rect.metal
skia-rs/src/: lib.rs
skia-rs/svg/: BUILD.bazel  Cargo.toml
skia-rs/svg/src/: css.rs  css_tests.rs  lib.rs  reader.rs  reader_tests.rs  svg.rs  svg_tests.rs
skia-rs/tessellation/: BUILD.bazel  Cargo.toml
skia-rs/tessellation/src/: boolean.rs  flatten.rs  flatten_tests.rs  lib.rs  stroke.rs  tessellator.rs
skia-rs/tessellation/tests/: path_effects.rs
skia-rs/test-support/: font.rs
skia-rs/tests/: codec_api.rs
skia-rs/tests/golden/: README.md
skia-rs/text/: BUILD.bazel  Cargo.toml
skia-rs/text/src/: break_provider.rs  break_provider_tests.rs  collection.rs  decoration.rs  decoration_tests.rs  error.rs  font.rs  layout.rs  lib.rs  line_break.rs  line_break_tests.rs  typeface.rs  typeface_tests.rs  types.rs
skia-rs/text/system/: BUILD.bazel  Cargo.toml
skia-rs/text/system/src/: catalog.rs  catalog_tests.rs  lib.rs
skia-rs/text/tests/: font.rs  text.rs  unicode_conformance.rs
skia-rs/text/tests/data/unicode/: SOURCES.md
skia-rs/text/tests/fonts/: README.md
skia-rs/text/tests/fonts/extra/: MANIFEST.toml
skia-rs/text/tests/fonts/skia/: METADATA.toml  UPSTREAM.toml
skia-rs/text/tests/fonts/synthetic/: collection-ab.ttc
skia-rs/text/tests/support/: font_fixtures.rs
skia-rs/xml/: BUILD.bazel  Cargo.toml
skia-rs/xml/src/: lib.rs  xml.rs  xml_tests.rs
skia-rs/xps/: BUILD.bazel  Cargo.toml
skia-rs/xps/src/: lib.rs  opc.rs  xps.rs  xps_tests.rs
src/: lib.rs
tessellation/: Cargo.toml
tessellation/src/: flatten.rs  lib.rs  path_effect.rs  stroke.rs
tests/: canvas.rs  facade_boundary.rs  path_boolean.rs  path_effects.rs
tests/golden/: README.md  clip_alpha.rgba  even_odd_path.rgba  gradient_layer.rgba  linear_image.rgba
text/: Cargo.toml
text/src/: break_provider.rs  collection.rs  decoration.rs  error.rs  (+5 more)
tools/gpu/: BUILD.bazel  README.md
tools/gpu/src/: compressed.rs  context.rs  image.rs  lib.rs  lib_tests.rs  submission.rs  surface.rs
(+11 files in other folders)
