[package]
name = "skia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
skia-codec = { path = "codec" }
skia-core = { path = "core" }
skia-cpu = { path = "cpu" }
skia-error = { path = "error" }
skia-geometry = { path = "geometry" }
skia-image = { path = "image" }
skia-path = { path = "path" }
