[workspace]
members = [
    ".",
    "codec",
    "core",
    "cpu",
    "error",
    "geometry",
    "gpu",
    "gpu/metal",
    "gpu/text",
    "gpu/vulkan",
    "image",
    "path",
    "tessellation",
    "text",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[package]
name = "skia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
skia-codec = { path = "codec" }
skia-core = { path = "core" }
skia-cpu = { path = "cpu" }
skia-error = { path = "error" }
skia-geometry = { path = "geometry" }
skia-image = { path = "image" }
skia-path = { path = "path" }
