[package]
name = "pdf-rs-skia-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
pdf-rs-skia-image = { path = "../image" }
