[package]
name = "skia-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
mozjpeg-rs = { version = "0.9.2", default-features = false }
png = "0.18.1"
skia-image = { path = "../image" }
