[package]
name = "pdf-rs-skia-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdf-rs-skia-error = { path = "../error" }
pdf-rs-skia-geometry = { path = "../geometry" }
pdf-rs-skia-image = { path = "../image" }
pdf-rs-skia-path = { path = "../path" }
pdf-rs-skia-text = { path = "../text" }
