[package]
name = "skia-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
skia-error = { path = "../error" }
skia-geometry = { path = "../geometry" }
skia-image = { path = "../image" }
skia-path = { path = "../path" }
skia-text = { path = "../text" }
