[package]
name = "skia-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
skia-core = { path = "../core", default-features = false }
skia-cpu = { path = "../cpu", optional = true }
skia-image = { path = "../image" }

[features]
software = ["dep:skia-cpu"]
