[package]
name = "skia-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
skia-core = { path = "../core", default-features = false }
skia-cpu = { path = "../cpu", optional = true }
skia-image = { path = "../image" }

[features]
software = ["dep:skia-cpu"]

[dev-dependencies]
sha2 = "0.10"
skia-codec = { path = "../codec" }

[[test]]
name = "render_oracle"
path = "tests/render_oracle.rs"
required-features = ["software"]
