[workspace]
members = [
    "codec",
    "core",
    "cpu",
    "error",
    "facade",
    "geometry",
    "gpu",
    "gpu/metal",
    "gpu/text",
    "gpu/vulkan",
    "image",
    "path",
    "tessellation",
    "text",
    "text/system",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
