[workspace]
members = [
    "codec",
    "core",
    "cpu",
    "pdf",
    "effects",
    "error",
    "geometry",
    "gpu",
    "gpu/metal",
    "gpu/text",
    "gpu/vulkan",
    "image",
    "path",
    "svg",
    "tessellation",
    "text",
    "text/system",
    "xml",
    "xps",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
# Internal
skia-codec = { path = "codec" }
skia-core = { path = "core", default-features = false }
skia-cpu = { path = "cpu" }
skia-pdf = { path = "pdf" }
skia-effects = { path = "effects" }
skia-error = { path = "error" }
skia-geometry = { path = "geometry" }
skia-gpu = { path = "gpu" }
skia-gpu-text = { path = "gpu/text" }
skia-image = { path = "image" }
skia-metal = { path = "gpu/metal" }
skia-path = { path = "path" }
skia-svg = { path = "svg" }
skia-system-fonts = { path = "text/system" }
skia-tessellation = { path = "tessellation" }
skia-text = { path = "text" }
skia-vulkan = { path = "gpu/vulkan" }
skia-xps = { path = "xps" }
skia-xml = { path = "xml" }

# External
ash = { version = "0.38.0", default-features = false }
clipper2-rust = "1.0.3"
flate2 = "1.1.9"
hyphenation = "0.8.4"
image = { version = "0.25.10", default-features = false }
metal = "0.33.0"
mozjpeg-rs = { version = "0.9.2", default-features = false }
moxcms = { version = "0.8.1", default-features = false }
naga = { version = "30.0.0", default-features = false }
png = "0.18.1"
rustybuzz = "0.20.1"
sha2 = "0.10"
swash = "0.2.10"
unicode-bidi = "0.3.18"
unicode-linebreak = "0.1.5"
unicode-segmentation = "1.13.3"
