[package]
name = "skia-metal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
metal = "0.33.0"
skia-core = { path = "../../core", default-features = false }
skia-gpu = { path = ".." }
skia-image = { path = "../../image" }
skia-tessellation = { path = "../../tessellation" }

[dev-dependencies]
skia-gpu = { path = "..", features = ["software"] }
