[package]
name = "skia-gpu-text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
skia-core = { path = "../../core" }
skia-gpu = { path = ".." }
skia-image = { path = "../../image" }

[dev-dependencies]
skia-cpu = { path = "../../cpu" }
skia-gpu = { path = "..", features = ["software"] }
