[package]
name = "skia-vulkan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ash = { version = "0.38.0", default-features = false, features = ["loaded", "std"] }
skia-core = { path = "../../core", default-features = false }
skia-gpu = { path = ".." }
