[package]
name = "skia-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
image = { workspace = true, features = ["jpeg", "png", "webp"] }
mozjpeg-rs = { workspace = true }
png = { workspace = true }
skia-image = { workspace = true }
