[package]
name = "skia-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
skia-error = { workspace = true }
skia-geometry = { workspace = true }
skia-image = { workspace = true }
skia-path = { workspace = true }
skia-text = { workspace = true, optional = true }

[features]
default = ["text"]
text = ["dep:skia-text"]
