[package]
name = "skia-cpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
skia-core = { workspace = true, features = ["text"] }
skia-image = { workspace = true }
skia-tessellation = { workspace = true }

[dev-dependencies]
skia-error = { workspace = true }
skia-geometry = { workspace = true }
skia-path = { workspace = true }
