[package]
name = "skia-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
skia-core = { workspace = true }
skia-cpu = { workspace = true, optional = true }
skia-image = { workspace = true }

[features]
software = ["dep:skia-cpu"]

[dev-dependencies]
sha2 = { workspace = true }
skia-codec = { workspace = true }

[[test]]
name = "render_oracle"
path = "tests/render_oracle.rs"
required-features = ["software"]
