[package]
name = "skia-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
flate2 = { workspace = true }
sha2 = { workspace = true }
skia-core = { workspace = true }
skia-cpu = { workspace = true }
skia-image = { workspace = true }

[dev-dependencies]
skia-text = { workspace = true }

[lib]
path = "src/lib.rs"
