[package]
name = "skia-svg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
skia-codec = { workspace = true }
skia-core = { workspace = true, features = ["text"] }
skia-image = { workspace = true }
skia-tessellation = { workspace = true }
skia-xml = { workspace = true }

[lib]
path = "src/lib.rs"
