load("//:defs.bzl", "skia_rust_crate")

skia_rust_crate(
    name = "text",
    crate_name = "skia_text",
    srcs_extra = ["//tools/fonts:test_typeface_src"],
)

filegroup(
    name = "font-test-fixtures",
    srcs = glob([
        "tests/fonts/skia/resources/fonts/**",
        "tests/fonts/synthetic/**",
    ]),
    visibility = ["//visibility:public"],
)
