[package]
name = "skia-text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
hyphenation = { workspace = true, features = ["embed_all"] }
rustybuzz = { workspace = true }
swash = { workspace = true }
unicode-bidi = { workspace = true }
unicode-linebreak = { workspace = true }
unicode-segmentation = { workspace = true }
