[package]
name = "skia-xps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
skia-codec = { workspace = true }
skia-core = { workspace = true }
skia-cpu = { workspace = true }
skia-image = { workspace = true }

[lib]
path = "src/lib.rs"
