[package]
name = "skia-metal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
metal = { workspace = true }
skia-core = { workspace = true }
skia-gpu = { workspace = true }
skia-image = { workspace = true }
skia-tessellation = { workspace = true }

[dev-dependencies]
skia-gpu = { workspace = true, features = ["software"] }
