[package]
name = "skia-gpu-text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
skia-core = { workspace = true, features = ["text"] }
skia-gpu = { workspace = true }
skia-image = { workspace = true }

[dev-dependencies]
skia-cpu = { workspace = true }
skia-gpu = { workspace = true, features = ["software"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
skia-metal = { workspace = true }
