[package]
name = "skia-vulkan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ash = { version = "0.38.0", default-features = false, features = ["loaded", "std"] }
skia-core = { path = "../../core", default-features = false }
skia-gpu = { path = ".." }
skia-tessellation = { path = "../../tessellation" }

[dev-dependencies]
skia-cpu = { path = "../../cpu" }
skia-gpu = { path = "..", features = ["software"] }
skia-image = { path = "../../image" }

[build-dependencies]
naga = { version = "30.0.0", default-features = false, features = ["spv-out", "wgsl-in"] }
