[package]
name = "skia-vulkan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ash = { workspace = true, features = ["loaded", "std"] }
skia-core = { workspace = true }
skia-gpu = { workspace = true }
skia-tessellation = { workspace = true }

[dev-dependencies]
skia-cpu = { workspace = true }
skia-gpu = { workspace = true, features = ["software"] }
skia-image = { workspace = true }

[build-dependencies]
naga = { workspace = true, features = ["spv-out", "wgsl-in"] }
